dataset1235/2025-2/1153765216/users/896391410/executions/2814675586_2935826613.log
== SUBMISSION (2025-08-26 19:08:46)
-- CODE: 
celsius = (input())
fahrenheit = (9/5) * celsius + 32
print(float(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(float(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(float(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(float(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(float(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(float(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(float(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:23:34)
-- CODE: 
celsius = (input())
fahrenheit = (9/5) * celsius + 32
print (float(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:26:10)
-- CODE: 
celsius = int(input())
fahrenheit = (9/5) * celsius + 32
print (float(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input())
              ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input())
              ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '220.1'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input())
              ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '40.7'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input())
              ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.2'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input())
              ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.4'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input())
              ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '40.0'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:22:30)
-- CODE: 
celsius = (input())
fahrenheit = (9/5) * celsius + 32
print(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:10:02)
-- CODE: 
celsius = (input())
fahrenheit = (9/5) * celsius + 32
print(float(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:28:25)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print (float(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (float(fahrenheit, 2))
           ^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (float(fahrenheit, 2))
           ^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (float(fahrenheit, 2))
           ^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (float(fahrenheit, 2))
           ^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (float(fahrenheit, 2))
           ^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (float(fahrenheit, 2))
           ^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:55:21)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print (fahrenheit)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
---- user output:
428.18
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
---- user output:
105.26
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
---- user output:
50.36
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
---- user output:
54.32
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
---- user output:
104.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:28:27)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print (float(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (float(fahrenheit, 2))
           ^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (float(fahrenheit, 2))
           ^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (float(fahrenheit, 2))
           ^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (float(fahrenheit, 2))
           ^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (float(fahrenheit, 2))
           ^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (float(fahrenheit, 2))
           ^^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:27:49)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print (float(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (float(fahrenheit,2))
           ^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (float(fahrenheit,2))
           ^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (float(fahrenheit,2))
           ^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (float(fahrenheit,2))
           ^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (float(fahrenheit,2))
           ^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (float(fahrenheit,2))
           ^^^^^^^^^^^^^^^^^^^
TypeError: float expected at most 1 argument, got 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:29:35)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print (fahrenheit, 2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0 2
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
---- user output:
428.18 2
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
---- user output:
105.26 2
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
---- user output:
50.36 2
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
---- user output:
54.32 2
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
---- user output:
104.0 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:23:35)
-- CODE: 
celsius = (input())
fahrenheit = (9/5) * celsius + 32
print (float(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
